local-k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pips-api
spec:
  selector:
    app: pips-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
