local-k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pips-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: pips-api.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pips-api
            port:
              number: 80
